<resources>
    <string name="app_name">Agenda YD</string>
    <string name="saludo">Hola %1$s</string>
    <string name="icono">dedo</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenya">Contraseña</string>
    <string name="login">Login</string>
    <string name="registrarse">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="tituloCrearTarea">Crear Tarea</string>
    <string name="registrar">Registrar</string>
    <string name="tareas">Tareas</string>
    <string name="coste">Coste</string>
    <string name="guardar">Guardar</string>
    <string name="volver">Volver</string>
    <string name="borrar">Borrar</string>
    <string name="hecha">Hecha</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="ver_tareas">Ver tareas</string>
    <string name="marcar_completada">Marcar completada</string>
    <string name="modificar_tarea">Modificar tarea</string>
    <string name="borrar_tarea">Borrar tarea</string>
    <string name="detalle_coste">Tiene un coste de %1$s €</string>
    <string name="detalle_para_fecha">Para el %1$s </string>
    <string name="hechas">Hechas</string>
    <string name="pendientes">Pendientes</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="acerca_de">Acerca de</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="avisoContrasenyaCambiada">Contraseña cambiada</string>
    <string name="avisoCamposVacios">Porfavor, rellena todos los campos</string>
    <string name="avisoContrasenyaNoCoincide">Las contraseña actual no coindice la indicada, contraseña base: admin</string>
    <string name="linkRepo">https://github.com/YaroslavDemyanenko/AgendaYNPI</string>
    <string name="hechoPor">Hecho por: Yaroslav Demyanenko</string>
    <string name="repositorio_git">Repositorio Git:</string>
    <string-array name="prioridades_array">
        <item>Urgente</item>
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>
</resources>
