<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azulFondo">

        <TextView
            android:id="@+id/txtCrearModificarTarea"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="56dp"
            android:gravity="center"
            android:text="@string/tituloCrearTarea"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/blancoLetraNormal"
            android:textColorHint="@color/blancoLetraHint"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/txtTareaNombre"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/blancoLetraNormal"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textColor="@color/blancoLetraNormal"
            android:textColorHint="@color/blancoLetraHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCrearModificarTarea"
            android:importantForAutofill="no" tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/txtDescripcionTarea"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/blancoLetraNormal"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="textPersonName"
            android:textColor="@color/blancoLetraNormal"
            android:textColorHint="@color/blancoLetraHint"
            app:layout_constraintEnd_toEndOf="@+id/txtTareaNombre"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtTareaNombre"
            app:layout_constraintTop_toBottomOf="@+id/txtTareaNombre"
            android:importantForAutofill="no" tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/txtCosteTarea"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/blancoLetraNormal"
            android:ems="10"
            android:hint="@string/coste"
            android:inputType="numberDecimal"
            android:textColor="@color/blancoLetraNormal"
            android:textColorHint="@color/blancoLetraHint"
            app:layout_constraintEnd_toEndOf="@+id/spinnerPrioridad"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtFechaTarea"
            app:layout_constraintTop_toBottomOf="@+id/txtFechaTarea"
            android:importantForAutofill="no" tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/txtFechaTarea"
            android:layout_width="168dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"

            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:maxLines="1"
            android:onClick="onClick"
            android:backgroundTint="@color/blancoLetraNormal"
            android:textColor="@color/blancoLetraNormal"
            android:textColorHint="@color/blancoLetraHint"
            app:layout_constraintStart_toStartOf="@+id/txtDescripcionTarea"
            app:layout_constraintTop_toBottomOf="@+id/txtDescripcionTarea"
            tools:targetApi="lollipop"
            android:importantForAutofill="no" />

        <Spinner
            android:id="@+id/spinnerPrioridad"
            android:layout_width="149dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/blancoLetraNormal"
            android:textColor="@color/blancoLetraNormal"
            app:layout_constraintEnd_toEndOf="@+id/txtDescripcionTarea"
            app:layout_constraintTop_toBottomOf="@+id/txtDescripcionTarea" tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnNuevaTarea"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginBottom="60dp"
            android:onClick="guardarTareaEnBd"
            android:text="@string/guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCosteTarea"
            app:layout_constraintVertical_bias="1.0"
            android:background="@color/azulFondoBoton"
            android:textColor="@color/blancoLetraNormal"
            />

        <Button
            android:id="@+id/btnListaTareas"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:onClick="irAMenuPrincipal"
            android:text="@string/cancelar"
            app:layout_constraintBottom_toBottomOf="@+id/btnNuevaTarea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.78"
            app:layout_constraintStart_toEndOf="@+id/btnNuevaTarea"
            app:layout_constraintTop_toTopOf="@+id/btnNuevaTarea"
            app:layout_constraintVertical_bias="0.98"
            android:background="@color/azulFondoBoton"
            android:textColor="@color/blancoLetraNormal"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>